fixed styling on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,17 @@
 /* Re usable*/
 /*----------------------------------------------------------*/
 
-* {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body,
+html {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .white-text {
@@ -41,49 +49,6 @@
 
 .mt-6 {
   margin-top: 5rem !important;
-}
-
-/*----------------------------------------------------------*/
-/* Skills*/
-/*----------------------------------------------------------*/
-
-.tech-card {
-  border: solid 1px #ccc;
-  border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
-    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
-    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
-  background-color: white;
-}
-
-.dashed-container {
-  position: relative;
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
-}
-
-.dashed-line {
-  height: 0%;
-  transition: height 2s;
-  border-left: 4px dashed #1db954;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-}
-
-.circle {
-  width: 50px;
-  height: 50px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 50%;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
 }
 
 /*----------------------------------------------------------*/
@@ -272,6 +237,49 @@ nav {
 }
 
 /*----------------------------------------------------------*/
+/* Skills*/
+/*----------------------------------------------------------*/
+
+.tech-card {
+  border: solid 1px #ccc;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
+    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+  background-color: white;
+}
+
+.dashed-container {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.dashed-line {
+  height: 0%;
+  transition: height 2s;
+  border-left: 4px dashed #1db954;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+/*----------------------------------------------------------*/
 /* Sections*/
 /*----------------------------------------------------------*/
 .spotify-text {
@@ -382,6 +390,10 @@ input:checked + .slider:before {
 /*----------------------------------------------------------*/
 /* Extra small devices (phones, up to 600px) */
 @media only screen and (max-width: 600px) {
+  .hand-written-font {
+    font-size: 3.5rem;
+  }
+
   .image-hide {
     display: none;
   }
